Fixed Style for Blurred Cards

--- a/projects/tmrw/style.css
+++ b/projects/tmrw/style.css
@@ -29,10 +29,10 @@ body {
 
 .card-bg-inner {
 	position: absolute;
-	top: 0;
-	left: 0;
-	bottom: 0;
-	right: 0;
+	top: -16px;
+	left: -16px;
+	bottom: 16px;
+	right: 16px;
 	background-color: #f4f4f4;
 	opacity: 0.5;
 	filter: blur(0.5px);
